@@ -7,8 +7,9 @@
 
   <groupId>com.example</groupId>
   <artifactId>Zumba-JSP-Servlet-JDBC</artifactId>
-  <packaging>war</packaging>
+<!--<packaging>war</packaging>-->
   <version>1.0-SNAPSHOT</version>
+  <packaging>jar</packaging>
 
   <name>Zumba-JSP-Servlet-JDBC Maven Webapp</name>
   <url>http://maven.apache.org</url>
@@ -87,15 +88,6 @@
           </execution>
         </executions>
       </plugin>
-        <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-compiler-plugin</artifactId>
-            <configuration>
-                <source>21</source>
-                <target>21</target>
-                <compilerArgs>--enable-preview</compilerArgs>
-            </configuration>
-        </plugin>
 
     </plugins>
   </build>
